--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -158,6 +158,9 @@
             }  
         </script>
         
+        <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript" ></script>
+        <script type="text/x-mathjax-config"> MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "AMS" } } }); </script>
+        
     </body>
     </html>
     
