--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,6 +55,47 @@
         
         {% include site-header.html %}
         
+        
+        {%- if page.use_math -%}
+    <script type="text/javascript">
+      window.MathJax = {
+        tex: {
+          macros: {
+            E: "{\\mathbb{E}}",
+            R: "{\\mathbb{R}}",
+          },
+
+          // Use AMS numbering rules and support labeled equations.
+          // See https://docs.mathjax.org/en/latest/input/tex/eqnumbers.html
+          tags: 'ams',
+        },
+
+        // See https://chrisyeh96.github.io/2020/03/29/mathjax3.html
+        options: {
+          renderActions: {
+            findScript: [9, function (doc) {
+              for (const node of document.querySelectorAll('script[type^="math/tex"]')) {
+                const display = !!node.type.match(/; *mode=display/);
+                const math = new doc.options.MathItem(node.textContent, doc.inputJax[0], display);
+                const text = document.createTextNode('');
+                node.parentNode.replaceChild(text, node);
+                math.start = {node: text, delim: '', n: 0};
+                math.end = {node: text, delim: '', n: 0};
+                doc.math.push(math);
+              }
+              doc.findMath();
+            }, '']
+          }
+        }
+      };
+    </script>
+    <script type="text/javascript" async
+      src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js">
+    </script>
+  {%- endif -%}
+        
+        
+        
         {% if page.layout == 'home' %}
         {% assign page-tagline = site.description | default: site.github.project_tagline | escape %}
         {% endif %}
