--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -125,7 +125,7 @@
                 </time>
                 {% assign page_author = page.author | default: site.author | default: nil | escape %}
                 {% if page_author %}
-                • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page_author }}</span></span>
+                • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page_author }}</span></span> • 
                 {% endif %}
                 {% if page.meta %} • {{ page.meta }}{% endif %}{% include post-readingtime.erb %}
             </h2>
