--- a/_includes/post-readingtime.erb
+++ b/_includes/post-readingtime.erb
@@ -5,8 +5,8 @@
      {% assign minutes = words | plus: 180 | divided_by: 180 %}
         {{ minutes }}
      {% if minutes == 1 %}
-        {{ " minute to read." }}
+        {{ " minute to read" }}
      {% else %}
-        {{ " minutes to read." }}
+        {{ " minutes to read" }}
      {% endif %}
    {% endunless %}
