--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -119,6 +119,7 @@
             <!-- Post tagline -->
             {% if page.layout == 'post' %}
             <h2 class="project-date">
+                {% assign page_author = page.author | default: site.author | default: nil | escape %}
                 {% if page_author %}
                 • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page_author }}</span></span> • 
                 {% endif %}
