--- a/_includes/post-readingtime.erb
+++ b/_includes/post-readingtime.erb
@@ -1,15 +1,9 @@
 {% capture words %}
       {{ page.content | number_of_words | minus: 180 }}
-   {% endcapture %}
-   {% unless words contains "-" %}
-     {% assign minutes = words | plus: 180 | divided_by: 180 %}
-        {{ minutes }}
-     {% if minutes == 1 %}
-        {{ " minute to read" }}
-     {% else %}
-        {{ " minutes to read" }}
-     {% endif %}
-   {% endunless %}
+    {% endcapture %}
+    {% unless words contains "-" %}
+      {% words | plus: 180 | divided_by: 180 | append: " min read" %}
+    {% endunless %}
 
 <!--  
 {% capture words %}
