--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -121,7 +121,7 @@
             <h2 class="project-date">
                 {% assign page_author = page.author | default: site.author | default: nil | escape %}
                 {% if page_author %}
-                • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page_author }}</span></span> • 
+                <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page_author }}</span></span> • 
                 {% endif %}
                 <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
                     {% assign date_format = site.cayman-blog.date_format | default: "%b %-d, %Y" %}
